[package]
name = 'peaq-node-runtime'
version = '3.0.0-polkadot-v0.9.13'
description = 'A node of the peaq network.'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/peaqnetwork/peaq-network-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '5.0.0-dev'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.serde]
default-features = false
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/purestake/substrate'
optional = true
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/purestake/substrate'
optional = true
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'


[dependencies.sp-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '0.10.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'

[dependencies.peaq-pallet-did]
default-features = false
git = 'https://github.com/peaqnetwork/peaq-pallet-did.git'
branch = 'feature/1201590612941083_evm_integration'
version = '0.0.1'

[dependencies.peaq-pallet-transaction]
default-features = false
git = 'https://github.com/peaqnetwork/peaq-pallet-transaction.git'
branch = 'feature/1201590612941083_evm_integration'
version = '0.0.1'


[dependencies.pallet-multisig]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'
version = '4.0.0-dev'


# ### Ethereum
[dependencies.sp-io]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.fp-evm]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.fp-self-contained]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-base-fee]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-evm-precompile-blake2]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-evm-precompile-bn128]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-evm-precompile-dispatch]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/purestake/frontier'
branch = 'moonbeam-polkadot-v0.9.13'


[features]
default = ["std", "aura"]
aura = []
manual-seal = []
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-contracts/runtime-benchmarks',
]
std = [
    'codec/std',
	"serde",

    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-multisig/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'peaq-pallet-did/std',
    'peaq-pallet-transaction/std',

	# ETH support
	'sp-io/std',
	'fp-evm/std',
	'fp-self-contained/std',
	'pallet-base-fee/std',
	'pallet-dynamic-fee/std',
	'pallet-ethereum/std',
	'pallet-evm/std',
	'pallet-evm-precompile-simple/std',
	'pallet-evm-precompile-modexp/std',
	'pallet-evm-precompile-sha3fips/std',
	'sp-std/std',
	'fp-rpc/std',
]
