[package]
name = "peaq-client-evm-tracing"
authors = ['peaq network <https://github.com/peaqnetwork>']
edition = "2021"
homepage = 'https://peaq.network/'
license = "GPL-3.0-only"
repository = 'https://github.com/peaqnetwork/peaq-network-node/'
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true, default-features = true }
hex = { workspace = true, default-features = true, features = [ "serde" ] }
serde = { workspace = true, default-features = true, features = [ "derive" ] }
serde_json = { workspace = true, default-features = true }

evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events" }
peaq-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }

# Substrate
codec = { package = "parity-scale-codec", workspace = true, default-features = true }
sp-std = { workspace = true, default-features = true }
