[package]
name = "peaq-client-evm-tracing"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
ethereum-types = { workspace = true, default-features = true }
evm-tracing-events = { workspace = true }
hex = { workspace = true, default-features = true, features = [ "serde" ] }
parity-scale-codec = { workspace = true, default-features = true }
peaq-rpc-primitives-debug = { workspace = true }
serde = { workspace = true, default-features = true, features = [ "derive" ] }
serde_json = { workspace = true, default-features = true }
sp-std = { workspace = true, default-features = true }
