[package]
name = "evm-accounts"
version = "2.18.0"
edition = "2021"

[dependencies]
log = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac", "static-context"], optional = true }
scale-info = { workspace = true }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

orml-traits = { workspace = true, default-features = false }

peaq-primitives-xcm = { path = "../../primitives/xcm", default-features = false }
# module-support = { path = "../support", default-features = false }
precompile-utils = { path = "../../precompiles/utils", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false }
orml-currencies = { workspace = true, default-features = false }
orml-tokens = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"log/std",
	"parity-scale-codec/std",
	"libsecp256k1",
	"libsecp256k1/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"peaq-primitives-xcm/std",
	"orml-traits/std",
	"precompile-utils/std",
	# "module-support/std",
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
