[package]
authors = ["KILT <info@kilt.io>"]
description = "Parachain parachain-staking pallet for collator delegation and selection as well as reward distribution"
edition = "2021"
name = "parachain-staking"
version = "1.6.2"

[dev-dependencies]
pallet-aura = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
hex-literal = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-block-reward = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
peaq-frame-ext = { workspace = true, features = ["mockup-avg-currency"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, default-features = false, optional = true }
sp-runtime = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-block-reward/std",
  "pallet-session/std",
  "peaq-frame-ext/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-consensus-aura/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
