[package]
authors = ["Jay pan <pan@eotlabs.io>"]
description = "Fix percentage for collators and delegaators on the parachain staking pallet."
name = "staking-coefficient-reward"
version = "0.0.1"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dev-dependencies]
pallet-aura = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }


[dependencies]
hex-literal = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, default-features = false, optional = true }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
parachain-staking = { path = "../parachain-staking", default-features = false }

# benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-session/std",
  "codec/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
  "parachain-staking/std",
  "sp-consensus-aura/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
